--- a/next-js-11-registration-login-example/package.json
+++ b/next-js-11-registration-login-example/package.json
@@ -14,6 +14,7 @@
         "express-jwt": "^6.1.0",
         "jsonwebtoken": "^8.5.1",
         "next": "^11.1.0",
+        "nextjs-progressbar": "^0.0.13",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -22,9 +23,9 @@
         "yup": "^0.32.9"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.0",
         "eslint": "7.32.0",
         "eslint-config-next": "11.1.0",
-        "autoprefixer": "^10.4.0",
         "postcss": "^8.4.4",
         "tailwindcss": "^3.0.0"
     }
