--- a/nobsion/package.json
+++ b/nobsion/package.json
@@ -10,8 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
-    "cheerio": "^1.0.0-rc.10",
-    "node-fetch": "^3.2.3",
-    "request": "^2.88.2"
+    "cheerio": "^1.0.0-rc.10"
   }
 }
